[metadata]
name = upgrade
version = 0.0.1
summary = Super upgrade script
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    upgrade

[entry_point]
console_scripts =
    upgrade = upgrade.upgrade:main
upgrade =
    clone-env = upgrade.commands.env:CloneEnvCommand
